--- a/portfolio.html
+++ b/portfolio.html
@@ -78,12 +78,15 @@
           <ul class="main-cards">
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/bankingapp.jpg"
-                  alt="Banking App"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/bankingapp.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Banking App Interface Concept</h2>
                   <p class="projects-description">App</p>
@@ -92,12 +95,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/cashlesspayment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/cashlesspayment.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Cashless Payment</h2>
                   <p class="projects-description">Marketing</p>
@@ -106,12 +112,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/meditationapp.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/meditationapp.jpg"
+                    alt="Meditaion App"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Meditaion App</h2>
                   <p class="projects-description">App</p>
@@ -120,12 +129,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/taxiservice.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/taxiservice.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Taxi Service</h2>
                   <p class="projects-description">Marketing</p>
@@ -134,12 +146,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/screenillustration.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/screenillustration.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Screen Illustrations</h2>
                   <p class="projects-description">Design</p>
@@ -148,12 +163,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/onlinecourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/onlinecourses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Online Courses</h2>
                   <p class="projects-description">Marketing</p>
@@ -162,12 +180,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/instastoriesconcept.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/instastoriesconcept.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Instagram Stories Concept</h2>
                   <p class="projects-description">Design</p>
@@ -176,12 +197,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/organicfood.jpg"
-                  alt="Organic Food"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/organicfood.jpg"
+                    alt="Organic Food"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Organic Food</h2>
                   <p class="projects-description">Web Site</p>
@@ -190,12 +214,15 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <img
-                  class="projects-icon"
-                  src="./images/portfolio/freshcoffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                />
+                <div class="projects-card">
+                  <img
+                    class="projects-icon"
+                    src="./images/portfolio/freshcoffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                </div>
+
                 <div class="projects-text">
                   <h2 class="projects-title">Fresh Coffee</h2>
                   <p class="projects-description">Web Site</p>
