--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="header-nav">
             <li class="nav-item">
-              <a class="nav-link studio" href="">Studio</a>
+              <a class="nav-link current" href="">Studio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./portfolio.html">Portfolio</a>
@@ -67,7 +67,7 @@
           <div class="modal">
             <button type="button" class="modal-button" data-modal-close>
               <svg class="modal-icon">
-                <use href="./images/icons/close-modal.svg"></use>
+                <use href="./images/icons/modal-close.svg"></use>
               </svg>
             </button>
           </div>
