--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,7 @@
               <a class="nav-link" href="./index.html">Studio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link portfolio" href="./portfolio.html"
-                >Portfolio</a
-              >
+              <a class="nav-link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="">Contacts</a>
@@ -78,13 +76,18 @@
           <ul class="main-cards">
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/bankingapp.jpg"
                     alt="Banking App"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -95,13 +98,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/cashlesspayment.jpg"
                     alt="Cashless Payment"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -112,13 +120,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/meditationapp.jpg"
                     alt="Meditaion App"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -129,13 +142,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/taxiservice.jpg"
                     alt="Taxi Service"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -146,13 +164,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/screenillustration.jpg"
                     alt="Screen Illustrations"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -163,13 +186,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/onlinecourses.jpg"
                     alt="Online Courses"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -180,13 +208,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/instastoriesconcept.jpg"
                     alt="Instagram Stories Concept"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -197,13 +230,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/organicfood.jpg"
                     alt="Organic Food"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
@@ -214,13 +252,18 @@
             </li>
             <li class="projects">
               <a class="projects-link" href="">
-                <div class="projects-card">
+                <div class="portfolio-overlay">
                   <img
                     class="projects-icon"
                     src="./images/portfolio/freshcoffee.jpg"
                     alt="Fresh Coffee"
                     width="360"
                   />
+                  <p class="text-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
 
                 <div class="projects-text">
