--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
           <div class="modal">
             <button type="button" class="modal-button" data-modal-close>
               <svg class="modal-icon">
-                <use href="./images/icons/modal-close.svg"></use>
+                <use
+                  href="./images/icons/symbol-defs.svg#modal-close"
+                  width="8px"
+                  height="8px"
+                ></use>
               </svg>
             </button>
           </div>
